--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {"dir" : "ltr",
     "lang" : "de",
     "name" : "",
-    "scope" : "/pathmoney/",
+    "scope" : "/path.money_mobile/",
     "display" : "browser",
-    "start_url" : "https://chaudharyvineet.github.io/pathmoney/",
+    "start_url" : "https://chaudharyvineet.github.io/path.money_mobile/",
     "short_name" : "",
     "theme_color" : "transparent",
     "description" : "",
