--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "pathmoney",
-  "short_name": "P",
+  "name": "path.money",
+  "short_name": "path.money",
   "theme_color": "#07bcae",
   "background_color": "#ffffff",
   "display": "standalone",
