--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "path.money",
   "short_name": "path.money",
   "theme_color": "#07bcae",
   "background_color": "#ffffff",
