--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#ffffff",
   "display": "standalone",
   "Scope": "/",
-  "start_url": "index.html",
+  "start_url": "/",
   "icons": [
   {
    "src": "./icons/android-icon-36x36.png",
